--- a/globals.css
+++ b/globals.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 @font-face {
   font-family: RobotoMono;
   src: url("public/RobotoMono-Regular.ttf");
@@ -21,6 +17,6 @@
 }
 
 body {
-  font-family: RobotoMono;
+  font-family: RobotoMono !important;
   transition: background-color 0.5s ease;
 }
